--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Assignment</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <h3 class="site-title">Bangladesh 2.0</h3>
+            <ul>
+                <li><a href=""><button>Sign up</button></a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
