--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <h3 class="site-title">Bangladesh 2.0</h3>
             <ul>
                 <li><a href=""><button>Sign up</button></a></li>
