--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar">
             <h3 class="site-title">Bangladesh 2.0</h3>
             <ul>
-                <li><a href=""><button>Sign up</button></a></li>
+                <li><a href=""><button class="btn">Sign up</button></a></li>
             </ul>
         </nav>
 
@@ -22,6 +24,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
