--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
 </head>
 
 <body class="open-sans-webfont">
-    <header>
+    <header class="header">
         <nav class="navbar">
             <h3 class="site-title">Bangladesh 2.0</h3>
             <ul>
-                <li><a href=""><button class="btn open-sans-webfont">Sign up</button></a></li>
+                <li><a href=""><button class="btn open-sans-webfont">Sign In</button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+
+                <h6>Bangladesh 2.0</h6>
+                <h1>Idea , innovation ,
+                    vision and challenges in New Bangladesh.</h1>
+                <button>Explore New Bangladesh</button>
+            </div>
+            <img src="./assets/hero.png" alt="">
+        </div>
 
     </header>
     <main>
