--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="banner">
             <div class="banner-content">
 
-                <h6>Bangladesh 2.0</h6>
-                <h1>Idea , innovation ,
+                <h6 class="banner-title">Bangladesh 2.0</h6>
+                <h1 class="bannar-discription">Idea , innovation ,
                     vision and challenges in New Bangladesh.</h1>
-                <button>Explore New Bangladesh</button>
+                <button class="banner-btn">Explore New Bangladesh</button>
             </div>
-            <img src="./assets/hero.png" alt="">
+            <img class="banner-img" src="./assets/hero.png" alt="">
         </div>
 
     </header>
