--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="banner-content">
 
                 <h6 class="banner-title">Bangladesh 2.0</h6>
-                <h1 class="bannar-discription">Idea , innovation ,
-                    vision and challenges in New Bangladesh.</h1>
+                <h1 class="bannar-discription">Idea , innovation ,<br>
+                    vision and challenges in<br>New Bangladesh.</h1>
                 <button class="banner-btn">Explore New Bangladesh</button>
             </div>
             <img class="banner-img" src="./assets/hero.png" alt="">
