--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
                     <h3 class="vision-sec-heading">Digital Transformation</h3>
                     <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
                         citizens.</p>
-                    <button>Learn More</button>
+                    <button class="btn1">Learn More</button>
                 </div>
 
                 <div class="card card2">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="vision-sec-heading">Green Energy</h3>
                     <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
-                    <button>Learn More</button>
+                    <button class="btn2">Learn More</button>
                 </div>
 
                 <div class="card card3">
@@ -63,7 +63,7 @@
                     <h3 class="vision-sec-heading">Modern Infrastructure</h3>
                     <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.
                     </p>
-                    <button>Learn More</button>
+                    <button class="btn3">Learn More</button>
                 </div>
             </div>
         </section>
