--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body class="open-sans-webfont">
+<body class="open-sans-webfont site-bg">
     <header class="header">
         <nav class="navbar">
             <h3 class="site-title">Bangladesh 2.0</h3>
@@ -34,10 +34,10 @@
 
     </header>
     <main>
-        <section>
+        <section class="sec-margin">
             <div>
                 <h2 class="site-heading">The Vision of Future</h2>
-                <p class="site-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                <p class="site-discription dis-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
                     promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
                     digital transformation, and robust infrastructure, the country is set to become a global model of
                     development.</p>
@@ -46,7 +46,7 @@
                 <div class="card card1">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="vision-sec-heading">Digital Transformation</h3>
-                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
+                    <p class="site-discription">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
                         citizens.</p>
                     <button class="btn1">Learn More</button>
                 </div>
@@ -54,18 +54,28 @@
                 <div class="card card2">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="vision-sec-heading">Green Energy</h3>
-                    <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <p class="site-discription">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <br>
                     <button class="btn2">Learn More</button>
                 </div>
 
                 <div class="card card3">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="vision-sec-heading">Modern Infrastructure</h3>
-                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.
+                    <p class="site-discription">Building state-of-the-art infrastructure to support economic growth and global competitiveness.
                     </p>
                     <button class="btn3">Learn More</button>
                 </div>
             </div>
+        </section>
+        <section class="quote-sec">
+            <div class="quote-content">
+                <p class="site-discription">We have to free our mind, imagine what has never happened before and write social fiction. We need to imagine things to make them happen. If you don't imagine, it will never happen. All human beings are born entrepreneurs.</p>
+                <h3 class="quote-title">Dr. Muhammad Yunus</h3>
+                <p class="site-discription">Chief Adviser of the People's Republic of Bangladesh</p>
+
+            </div>
+
         </section>
 
     </main>
