more quote style

--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             </div>
 
         </section>
+        <section class="News-section">
+            <img src="/assets/satelite.png" alt="">
+             <article>
+                <h2></h2>
+             </article>
+
+        </section>
 
     </main>
     <footer>
