--- a/index.html
+++ b/index.html
@@ -78,10 +78,31 @@
 
         </section>
         <section class="News-section">
-            <img src="/assets/satelite.png" alt="">
-             <article>
-                <h2></h2>
-             </article>
+            <img class="news-image" src="/assets/satelite.png" alt="">
+              <div class="news-content">
+                <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                <img src="/assets/al-jazeera.png" alt="al-jazeera">
+                 <div class="time site-discription"><p>Date: 05/01/2025</p><p>Time: 10.25 PM</p>
+                </div>
+                <p class="site-discription">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                 <button class="news-btn">Read more</button>
+                
+                </div>
+
+        </section>
+        <section class="News-section">
+           
+              <div class="news-content">
+                <h2 class="news-title">Bangladesh Launches New Satellite</h2>
+                <img src="/assets/al-jazeera.png" alt="al-jazeera">
+                 <div class="time site-discription"><p>Date: 05/01/2025</p><p>Time: 10.25 PM</p>
+                </div>
+                <p class="site-discription">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                    with a certain degree of justification, be able to speak of humankind as civilized</p>
+                 <button class="news-btn">Read more</button>
+                </div>
+                <img class="news-image" src="/assets/satelite.png" alt="">
 
         </section>
 
