--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
             </div>
 
         </section>
+        <div>
+            <h2 class="site-heading">Recent News</h2>
+            <p class="site-discription dis-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        </div>
         <section class="News-section">
-            <img class="news-image" src="/assets/satelite.png" alt="">
+              <img class="news-image" src="/assets/satelite.png" alt="">
               <div class="news-content">
                 <h2 class="news-title">Bangladesh Launches New Satellite</h2>
                 <img src="/assets/al-jazeera.png" alt="al-jazeera">
