--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <section class="sec-margin">
             <div>
                 <h2 class="site-heading">The Vision of Future</h2>
-                <p class="site-discription dis-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                <p class="site-discription dis-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by
+                    embracing cutting-edge technology,
                     promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy,
                     digital transformation, and robust infrastructure, the country is set to become a global model of
                     development.</p>
@@ -46,7 +47,8 @@
                 <div class="card card1">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="vision-sec-heading">Digital Transformation</h3>
-                    <p class="site-discription">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
+                    <p class="site-discription">Creating a nationwide digital ecosystem to enhance connectivity and
+                        access to services for all
                         citizens.</p>
                     <button class="btn1">Learn More</button>
                 </div>
@@ -54,7 +56,8 @@
                 <div class="card card2">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="vision-sec-heading">Green Energy</h3>
-                    <p class="site-discription">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <p class="site-discription">Investments in solar and wind energy to ensure a sustainable and
+                        eco-friendly future.</p>
                     <br>
                     <button class="btn2">Learn More</button>
                 </div>
@@ -62,7 +65,8 @@
                 <div class="card card3">
                     <img src="assets/card-icon.png" alt="">
                     <h3 class="vision-sec-heading">Modern Infrastructure</h3>
-                    <p class="site-discription">Building state-of-the-art infrastructure to support economic growth and global competitiveness.
+                    <p class="site-discription">Building state-of-the-art infrastructure to support economic growth and
+                        global competitiveness.
                     </p>
                     <button class="btn3">Learn More</button>
                 </div>
@@ -70,7 +74,9 @@
         </section>
         <section class="quote-sec">
             <div class="quote-content">
-                <p class="site-discription">We have to free our mind, imagine what has never happened before and write social fiction. We need to imagine things to make them happen. If you don't imagine, it will never happen. All human beings are born entrepreneurs.</p>
+                <p class="site-discription">We have to free our mind, imagine what has never happened before and write
+                    social fiction. We need to imagine things to make them happen. If you don't imagine, it will never
+                    happen. All human beings are born entrepreneurs.</p>
                 <h3 class="quote-title">Dr. Muhammad Yunus</h3>
                 <p class="site-discription">Chief Adviser of the People's Republic of Bangladesh</p>
 
@@ -79,35 +85,67 @@
         </section>
         <div>
             <h2 class="site-heading">Recent News</h2>
-            <p class="site-discription dis-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <p class="site-discription dis-margin">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.</p>
         </div>
         <section class="News-section">
-              <img class="news-image" src="/assets/satelite.png" alt="">
-              <div class="news-content">
+            <img class="news-image" src="/assets/satelite.png" alt="">
+            <div class="news-content">
                 <h2 class="news-title">Bangladesh Launches New Satellite</h2>
                 <img src="/assets/al-jazeera.png" alt="al-jazeera">
-                 <div class="time site-discription"><p>Date: 05/01/2025</p><p>Time: 10.25 PM</p>
+                <div class="time site-discription">
+                    <p>Date: 05/01/2025</p>
+                    <p>Time: 10.25 PM</p>
                 </div>
-                <p class="site-discription">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                <p class="site-discription">Not until the creation and maintenance of decent conditions of life for all
+                    people are recognized and accepted as a common obligation of all people and all countries—not until
+                    then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                 <button class="news-btn">Read more</button>
-                
-                </div>
+                <button class="news-btn">Read more</button>
+
+            </div>
 
         </section>
         <section class="News-section">
-           
-              <div class="news-content">
+
+            <div class="news-content">
                 <h2 class="news-title">Bangladesh Launches New Satellite</h2>
                 <img src="/assets/al-jazeera.png" alt="al-jazeera">
-                 <div class="time site-discription"><p>Date: 05/01/2025</p><p>Time: 10.25 PM</p>
+                <div class="time site-discription">
+                    <p>Date: 05/01/2025</p>
+                    <p>Time: 10.25 PM</p>
                 </div>
-                <p class="site-discription">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                <p class="site-discription">Not until the creation and maintenance of decent conditions of life for all
+                    people are recognized and accepted as a common obligation of all people and all countries—not until
+                    then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                 <button class="news-btn">Read more</button>
-                </div>
-                <img class="news-image" src="/assets/satelite.png" alt="">
+                <button class="news-btn">Read more</button>
+            </div>
+            <img class="news-image" src="/assets/satelite.png" alt="">
 
+        </section>
+        <section class="donate-sec">
+            <div class="donate-title">
+                <h2 class="site-heading">Donate Today</h2>
+                <p class="site-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                    cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives
+                    in renewable energy, digital transformation, and robust infrastructure.</p>
+            </div>
+            <div class="amounts">
+                <div class="amount site-heading">100 Taka</div>
+                <div class="amount site-heading"> 200 Taka</div>
+                <div class="amount site-heading">500 Taka</div>
+                <div class="amount site-heading">1000 Taka</div>
+            </div>
+            <br>
+            <input class="donate-amount" type="text" placeholder="your donate amount" name="" id="">
+            <br>
+            <br>
+            <div>
+                <button>Donate now</button>
+            </div>
         </section>
 
     </main>
