--- a/index.html
+++ b/index.html
@@ -140,10 +140,13 @@
                 <div class="amount site-heading">1000 Taka</div>
             </div>
             <br>
-            <input class="donate-amount" type="text" placeholder="your donate amount" name="" id="">
+            <div class="donate-amounts">
+            <input class="donate-amount" type="text" placeholder="Other Amount (Taka)" name="" id="">
+        </div>
             <br>
             <br>
-            <div>
+            <br>
+             <div>
                 <button>Donate now</button>
             </div>
         </section>
