--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <section class="donate-sec">
             <div class="donate-title">
                 <h2 class="site-heading">Donate Today</h2>
-                <p class="site-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                <p class="donate-dis site-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
                     cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives
                     in renewable energy, digital transformation, and robust infrastructure.</p>
             </div>
@@ -146,9 +146,22 @@
             <br>
             <br>
             <br>
-             <div>
-                <button>Donate now</button>
+             <div class="button-container">
+                <button class="donate-button">Donate now</button>
             </div>
+        </section>
+        <section class="newsletter-sec">
+            <div class="newsletter-title site-heading">
+             <h2>Subscribe Newsletter</h2>
+            <p class="site-discription newl-dis">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>technology, promoting inclusive growth.</p>
+        </div>
+        <div class="new-sub">
+        <input class="email-sec" type="email" placeholder="Enter your email here" name="" id=""> <button class="newl-btn">Subscribe</button>
+    </div>
+        <div>
+            <p class="last-para">We promise not to spam you!</p>
+        </div>
+
         </section>
 
     </main>
