add some btn hower

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar">
             <h3 class="site-title">Bangladesh 2.0</h3>
             <ul>
-                <li><a href=""><button class="btn open-sans-webfont">Sign In</button></a></li>
+                <li><a href=""><button class="btn open-sans-webfont hover-efect">Sign In</button></a></li>
             </ul>
         </nav>
         <div class="banner">
@@ -27,7 +27,7 @@
                 <h6 class="banner-title">Bangladesh 2.0</h6>
                 <h1 class="bannar-discription">Idea , innovation ,<br>
                     vision and challenges in<br>New Bangladesh.</h1>
-                <button class="banner-btn">Explore New Bangladesh</button>
+                <button class="banner-btn hover-efect">Explore New Bangladesh</button>
             </div>
             <img class="banner-img" src="./assets/hero.png" alt="">
         </div>
@@ -50,7 +50,7 @@
                     <p class="site-discription">Creating a nationwide digital ecosystem to enhance connectivity and
                         access to services for all
                         citizens.</p>
-                    <button class="btn1">Learn More</button>
+                    <button class="btn1 hover-efect">Learn More</button>
                 </div>
 
                 <div class="card card2">
@@ -59,7 +59,7 @@
                     <p class="site-discription">Investments in solar and wind energy to ensure a sustainable and
                         eco-friendly future.</p>
                     <br>
-                    <button class="btn2">Learn More</button>
+                    <button class="btn2 hover-efect">Learn More</button>
                 </div>
 
                 <div class="card card3">
@@ -68,7 +68,7 @@
                     <p class="site-discription">Building state-of-the-art infrastructure to support economic growth and
                         global competitiveness.
                     </p>
-                    <button class="btn3">Learn More</button>
+                    <button class="hover-efect btn3">Learn More</button>
                 </div>
             </div>
         </section>
@@ -103,7 +103,7 @@
                     people are recognized and accepted as a common obligation of all people and all countries—not until
                     then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                <button class="news-btn">Read more</button>
+                <button class="news-btn hover-efect">Read more</button>
 
             </div>
 
@@ -121,7 +121,7 @@
                     people are recognized and accepted as a common obligation of all people and all countries—not until
                     then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                <button class="news-btn">Read more</button>
+                <button class="news-btn hover-efect">Read more</button>
             </div>
             <img class="news-image" src="/assets/satelite.png" alt="">
 
@@ -147,7 +147,7 @@
             <br>
             <br>
              <div class="button-container">
-                <button class="donate-button">Donate now</button>
+                <button class="donate-button hover-efect">Donate now</button>
             </div>
         </section>
         <section class="newsletter-sec">
@@ -156,7 +156,7 @@
             <p class="site-discription newl-dis">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>technology, promoting inclusive growth.</p>
         </div>
         <div class="new-sub">
-        <input class="email-sec" type="email" placeholder="Enter your email here" name="" id=""> <button class="newl-btn">Subscribe</button>
+        <input class="email-sec" type="email" placeholder="Enter your email here" name="" id=""> <button class="newl-btn hover-efect">Subscribe</button>
     </div>
         <div>
             <p class="last-para">We promise not to spam you!</p>
