solve image path

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 global model of development.</p>
         </div>
         <section class="News-section">
-            <img class="news-image" src="/assets/satelite.png" alt="">
+            <img class="news-image" src="assets/satelite.png" alt="">
             <div class="news-content">
                 <h2 class="news-title">Bangladesh Launches New Satellite</h2>
-                <img src="/assets/al-jazeera.png" alt="al-jazeera">
+                <img src="assets/al-jazeera.png" alt="al-jazeera">
                 <div class="time site-discription">
                     <p>Date: 05/01/2025</p>
                     <p>Time: 10.25 PM</p>
@@ -112,7 +112,7 @@
 
             <div class="news-content">
                 <h2 class="news-title">Bangladesh Launches New Satellite</h2>
-                <img src="/assets/al-jazeera.png" alt="al-jazeera">
+                <img src="assets/al-jazeera.png" alt="al-jazeera">
                 <div class="time site-discription">
                     <p>Date: 05/01/2025</p>
                     <p>Time: 10.25 PM</p>
@@ -123,7 +123,7 @@
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
                 <button class="news-btn hover-efect">Read more</button>
             </div>
-            <img class="news-image" src="/assets/satelite.png" alt="">
+            <img class="news-image" src="assets/satelite.png" alt="">
 
         </section>
         <section class="donate-sec">
