--- a/index.html
+++ b/index.html
@@ -165,7 +165,11 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="footer">
+        <h2 class="site-title">Bangladesh 2.0</h2>
+        <div class="social-icon">
+            <img src="assets/facebook.png" alt=""><img src="assets/instagram.png" alt=""><img src="assets/x.png" alt="">
+        </div>
 
     </footer>
 
