--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         <section class="donate-sec">
             <div class="donate-title">
                 <h2 class="site-heading">Donate Today</h2>
-                <p class="donate-dis site-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                <p class="donate-dis site-discription">Bangladesh 2.0 aims to redefine the nation’s trajectory by
+                    embracing
                     cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives
                     in renewable energy, digital transformation, and robust infrastructure.</p>
             </div>
@@ -141,26 +142,28 @@
             </div>
             <br>
             <div class="donate-amounts">
-            <input class="donate-amount" type="text" placeholder="Other Amount (Taka)" name="" id="">
-        </div>
+                <input class="donate-amount" type="text" placeholder="Other Amount (Taka)" name="" id="">
+            </div>
             <br>
             <br>
             <br>
-             <div class="button-container">
+            <div class="button-container">
                 <button class="donate-button hover-efect">Donate now</button>
             </div>
         </section>
         <section class="newsletter-sec">
             <div class="newsletter-title site-heading">
-             <h2>Subscribe Newsletter</h2>
-            <p class="site-discription newl-dis">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge <br>technology, promoting inclusive growth.</p>
-        </div>
-        <div class="new-sub">
-        <input class="email-sec" type="email" placeholder="Enter your email here" name="" id=""> <button class="newl-btn hover-efect">Subscribe</button>
-    </div>
-        <div>
-            <p class="last-para">We promise not to spam you!</p>
-        </div>
+                <h2>Subscribe Newsletter</h2>
+                <p class="site-discription newl-dis">Bangladesh 2.0 aims to redefine the nation’s trajectory by
+                    embracing cutting-edge <br>technology, promoting inclusive growth.</p>
+            </div>
+            <div class="new-sub">
+                <input class="email-sec" type="email" placeholder="Enter your email here" name="" id=""> <button
+                    class="newl-btn hover-efect">Subscribe</button>
+            </div>
+            <div>
+                <p class="last-para">We promise not to spam you!</p>
+            </div>
 
         </section>
 
