--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     vision and challenges in<br>New Bangladesh.</h1>
                 <button class="banner-btn hover-efect">Explore New Bangladesh</button>
             </div>
-            <img class="banner-img" src="./assets/hero.png" alt="">
+            <img class="banner-img" src="./assets/hero.png" alt="bangladesh flag">
         </div>
 
     </header>
@@ -91,7 +91,7 @@
                 global model of development.</p>
         </div>
         <section class="News-section">
-            <img class="news-image" src="assets/satelite.png" alt="">
+            <img class="news-image" src="assets/satelite.png" alt="satelite">
             <div class="news-content">
                 <h2 class="news-title">Bangladesh Launches New Satellite</h2>
                 <img src="assets/al-jazeera.png" alt="al-jazeera">
@@ -123,7 +123,7 @@
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
                 <button class="news-btn hover-efect">Read more</button>
             </div>
-            <img class="news-image" src="assets/satelite.png" alt="">
+            <img class="news-image" src="assets/satelite.png" alt="satelite">
 
         </section>
         <section class="donate-sec">
